@startuml

skinparam monochrome true
skinparam packageStyle rect
skinparam defaultFontName FG Virgil
skinparam shadowing false


class ExportCSVService
class ExportCSVServiceView

class Workbook {
	- List<Spreadsheet> spreadsheets
}

interface Spreadsheet
interface Cell


Spreadsheet <|-- Workbook
Cell <|-- Spreadsheet
Workbook <|-- ExportCSVService
ExportCSVService <|-- ExportCSVServiceView
@enduml
